// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The alarms-handler stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuDistributionBucketParameter",
      "GuLambdaFunction",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlerGROWTHwebhook": {
      "Description": "GROWTH Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlerPPwebhook": {
      "Description": "PP Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlerSREwebhook": {
      "Description": "SRE Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlerVALUEwebhook": {
      "Description": "VALUE Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlermobileaccountrolearn": {
      "Description": "ARN of role in the mobile account which allows cloudwatch:ListTagsForResource",
      "Type": "String",
    },
    "alarmshandlermobileawsaccount": {
      "Description": "ID of the mobile aws account",
      "Type": "String",
    },
    "alarmshandlertargetingawsaccount": {
      "Description": "ID of the targeting aws account",
      "Type": "String",
    },
  },
  "Resources": {
    "alarmshandleralarm5F97F469": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":",
                {
                  "Fn::GetAtt": [
                    "alarmshandlertopic003C974E",
                    "TopicName",
                  ],
                },
              ],
            ],
          },
        ],
        "AlarmDescription": "There was an error in the lambda function that handles CloudWatch alarms.",
        "AlarmName": "CODE: Failed to handle CloudWatch alarm",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersalarmshandlerqueueC7A67616",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 24,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "alarmshandlercloudwatchpolicy7746710B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:ListTagsForResource",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlercloudwatchpolicy7746710B",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerlambda383D2BAA": {
      "DependsOn": [
        "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "alarmshandlerlambdaServiceRole3953DF7F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/alarms-handler/alarms-handler.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "alarms-handler",
            "GROWTH_WEBHOOK": {
              "Ref": "alarmshandlerGROWTHwebhook",
            },
            "MOBILE_AWS_ACCOUNT_ID": {
              "Ref": "alarmshandlermobileawsaccount",
            },
            "MOBILE_ROLE_ARN": {
              "Ref": "alarmshandlermobileaccountrolearn",
            },
            "PP_WEBHOOK": {
              "Ref": "alarmshandlerPPwebhook",
            },
            "SRE_WEBHOOK": {
              "Ref": "alarmshandlerSREwebhook",
            },
            "STACK": "membership",
            "STAGE": "CODE",
            "VALUE_WEBHOOK": {
              "Ref": "alarmshandlerVALUEwebhook",
            },
          },
        },
        "FunctionName": "alarms-handler-CODE",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "alarmshandlerlambdaServiceRole3953DF7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "alarmshandlerlambdaServiceRole3953DF7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/alarms-handler/alarms-handler.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/alarms-handler",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/alarms-handler/*",
                  ],
                ],
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": {
                "Ref": "alarmshandlermobileaccountrolearn",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerlambdaSqsEventSourcealarmshandlerCODEalarmshandlerqueue16858B0A6ACA8CB7": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "alarmshandlerlambda383D2BAA",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "alarmshandlerqueue255509D6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "alarms-handler-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersalarmshandlerqueueC7A67616",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "alarmshandlerqueuePolicy2451CBBF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "alarmshandlertopic003C974E",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "alarmshandlerqueue255509D6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "alarmshandlerqueuealarmshandlerCODEalarmshandlertopic53848409AA067E1C": {
      "DependsOn": [
        "alarmshandlerqueuePolicy2451CBBF",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "alarmshandlertopic003C974E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "alarmshandlertopic003C974E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "TopicName": "alarms-handler-topic-CODE",
      },
      "Type": "AWS::SNS::Topic",
    },
    "alarmshandlertopicPolicy7401CE24": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlermobileawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlertargetingawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "alarmshandlertopic003C974E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "alarmshandlertopic003C974E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "deadlettersalarmshandlerqueueC7A67616": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-alarms-handler-queue-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`The alarms-handler stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuDistributionBucketParameter",
      "GuLambdaFunction",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlerGROWTHwebhook": {
      "Description": "GROWTH Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlerPPwebhook": {
      "Description": "PP Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlerSREwebhook": {
      "Description": "SRE Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlerVALUEwebhook": {
      "Description": "VALUE Team Google Chat webhook URL",
      "Type": "String",
    },
    "alarmshandlermobileaccountrolearn": {
      "Description": "ARN of role in the mobile account which allows cloudwatch:ListTagsForResource",
      "Type": "String",
    },
    "alarmshandlermobileawsaccount": {
      "Description": "ID of the mobile aws account",
      "Type": "String",
    },
    "alarmshandlertargetingawsaccount": {
      "Description": "ID of the targeting aws account",
      "Type": "String",
    },
  },
  "Resources": {
    "alarmshandleralarm5F97F469": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":",
                {
                  "Fn::GetAtt": [
                    "alarmshandlertopic003C974E",
                    "TopicName",
                  ],
                },
              ],
            ],
          },
        ],
        "AlarmDescription": "There was an error in the lambda function that handles CloudWatch alarms.",
        "AlarmName": "PROD: Failed to handle CloudWatch alarm",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersalarmshandlerqueueC7A67616",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 24,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "alarmshandlercloudwatchpolicy7746710B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:ListTagsForResource",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlercloudwatchpolicy7746710B",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerlambda383D2BAA": {
      "DependsOn": [
        "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "alarmshandlerlambdaServiceRole3953DF7F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/alarms-handler/alarms-handler.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "alarms-handler",
            "GROWTH_WEBHOOK": {
              "Ref": "alarmshandlerGROWTHwebhook",
            },
            "MOBILE_AWS_ACCOUNT_ID": {
              "Ref": "alarmshandlermobileawsaccount",
            },
            "MOBILE_ROLE_ARN": {
              "Ref": "alarmshandlermobileaccountrolearn",
            },
            "PP_WEBHOOK": {
              "Ref": "alarmshandlerPPwebhook",
            },
            "SRE_WEBHOOK": {
              "Ref": "alarmshandlerSREwebhook",
            },
            "STACK": "membership",
            "STAGE": "PROD",
            "VALUE_WEBHOOK": {
              "Ref": "alarmshandlerVALUEwebhook",
            },
          },
        },
        "FunctionName": "alarms-handler-PROD",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "alarmshandlerlambdaServiceRole3953DF7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "alarmshandlerlambdaServiceRole3953DF7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/alarms-handler/alarms-handler.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/alarms-handler",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/alarms-handler/*",
                  ],
                ],
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": {
                "Ref": "alarmshandlermobileaccountrolearn",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerlambdaSqsEventSourcealarmshandlerPRODalarmshandlerqueue21D5C3E59ECCFD65": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "alarmshandlerlambda383D2BAA",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "alarmshandlerqueue255509D6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "alarms-handler-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersalarmshandlerqueueC7A67616",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "alarmshandlerqueuePolicy2451CBBF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "alarmshandlertopic003C974E",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "alarmshandlerqueue255509D6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "alarmshandlerqueuealarmshandlerPRODalarmshandlertopic952FCC2B727BB750": {
      "DependsOn": [
        "alarmshandlerqueuePolicy2451CBBF",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "alarmshandlertopic003C974E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "alarmshandlertopic003C974E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "alarms-handler-topic-PROD",
      },
      "Type": "AWS::SNS::Topic",
    },
    "alarmshandlertopicPolicy7401CE24": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlermobileawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlertargetingawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "alarmshandlertopic003C974E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "alarmshandlertopic003C974E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "deadlettersalarmshandlerqueueC7A67616": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-alarms-handler-queue-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
